modified:   __pycache__/hello.cpython-34.pyc 	new file:   error_logs.log 	modified:   etc/gunicorn.conf 	modified:   etc/nginx.conf 	modified:   hello.py

--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,6 +3,11 @@ server {
 	server_name localhost;
 	root /home/box/web;
 	
+	location ~ /hello/ {
+		proxy_pass http://0.0.0.0:8080;
+		include proxy_params;
+	}
+
 	location ~ /uploads/ {
 		root /home/box/web;
 	}
