--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -3,6 +3,11 @@ server {
 	server_name localhost;
 	root /home/box/web;
 	
+	location ~ / {
+		proxy_pass http://0.0.0.0:8000;
+		include proxy_params;
+	}
+
 	location ~ /hello/ {
 		proxy_pass http://0.0.0.0:8080;
 		include proxy_params;
@@ -16,9 +21,5 @@ server {
 		root /home/box/web/public;
 	}
 
-	location / {
-		try_files $uri $uri/ =404;
-	}
-
-	error_log /home/box/test.error.log;
+	error_log /home/box/web/nginx.error.log;
 }
